# devops-midterm-exam

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
deploy/: ansible.cfg  docker-compose.yml.j2  inventory.ini.example  playbook.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
infra/: cloudformation.yml
solutions/part1/1a-dockerfile/: Dockerfile
solutions/part1/1b-cloudformation/: template.yml
solutions/part1/1c-ansible/: playbook.yml
solutions/part2/2a-compose/: docker-compose.yml
solutions/part2/2c-ansible/: inventory.ini
src/mock_openai_api/: __init__.py
tests/: test_api.py
