[project]
name = "mock-openai-api"
version = "1.0.0"
description = "Mock OpenAI-compatible API for DevOps exam — always reminds you to use a real LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
mock-openai-api = "mock_openai_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_openai_api"]

[dependency-groups]
dev = [
    "commitizen>=4.12.0",
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "ruff>=0.14.0",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = false
